# Lab4_Data_delete

./: Ammo_container.h  CMakeLists.txt  Inventory.cpp  Inventory.h  Lab4.mdj  Map.cpp  Map.h  Medkit.cpp  Medkit.h  Operative.cpp  Operative.h  README.md  Specifications.h  Weapon.h  main.cpp
graphics/: GraphicCreature.cpp  GraphicCreature.h  GraphicFurajir.cpp  GraphicFurajir.h  GraphicOperative.cpp  GraphicOperative.h  GraphicWild.cpp  GraphicWild.h
src/: Aidkit.cpp  Aidkit.h  AmmoContainer.h  Ammo_container.cpp  Ammo_container.h  Creature.cpp  Creature.h  Furajir.cpp  Furajir.h  Inventory.cpp  Inventory.h  MyVector.h  Object.cpp  Object.h  Operative.cpp  Operative.h  SmartCreature.cpp  SmartCreature.h  Specifications.cpp  Weapon.cpp  Weapon.h  WildCreature.cpp  WildCreature.h  Wild_creature.cpp  Wild_creature.h
